feat(driver): updated driver proto file, changed driver sql schema
fixed driver proto file(small fixes and changes): number field,
vehicle_plate_number
added vehicle fields to driver sql schema
